# vektoria

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
api/: server.py
benchmarks/: __init__.py  bench_engine.py  bench_vs.py  benchmark.py  demo_pdf.py  plot.py  run_benchmark.py  test_queries.py
benchmarks/results/: bench_Droit_pénal_LCR_-_OFFICIEL_20260529_005238.json
chunker/: __init__.py  chunker.py  recursive.py  similarity.py
embedder/: __init__.py  embedder.py
ingestion/: __init__.py  extractors.py  ingester.py
landing/: index.html
pdf_extractor/: __init__.py  extractor.py  models.py
tests/: test_full_pipeline.py
tests/vektoria/: test_ann.py  test_backends.py  test_embedding.py  test_hardening.py  test_index.py  test_ingest.py  test_manager.py  test_server.py
vector_store/: __init__.py  store.py
vektoria/: __init__.py  ann.py  backends.py  bm25.py  cli.py  dashboard.py  embedding.py  index.py  manager.py  server.py
vektoria/ingest/: __init__.py  chunk.py  extract.py  pipeline.py
