[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vektoria"
version = "0.1.0"
description = "Self-hostable European vector database — a sovereign, GDPR-friendly Pinecone alternative."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "hillzeealex", email = "hillzeealex@gmail.com" }]
keywords = ["vector-database", "vector-search", "rag", "embeddings", "self-hosted", "gdpr", "bm25"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core engine needs only numpy. Heavier features are opt-in extras below.
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
server = ["fastapi>=0.111", "uvicorn>=0.30", "python-multipart>=0.0.9"]
embeddings = ["sentence-transformers>=3.0"]
ingest = ["PyMuPDF>=1.24", "python-docx>=1.1"]
all = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "sentence-transformers>=3.0",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
]
# Competitor engines for benchmarks/bench_vs.py (optional, dev-only).
bench = ["faiss-cpu>=1.8", "hnswlib>=0.8", "chromadb>=0.5", "pinecone>=5.0"]

[project.urls]
Homepage = "https://github.com/hillzeealex/vektoria"
Repository = "https://github.com/hillzeealex/vektoria"

[project.scripts]
vektoria = "vektoria.cli:main"

[tool.hatch.build.targets.wheel]
# Ship only the clean core package — not the legacy top-level modules.
packages = ["vektoria"]
